// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wpp-topbar renders component 1`] = `
<wpp-topbar class="wpp-topbar" exportparts="wrapper, body, navigation, topbar-item, divider, app, right, app-wrapper, right-wrapper">
  <mock:shadow-root>
    <div class="wrapper" part="wrapper">
      <wpp-grid container="">
        <wpp-grid all="24" item="">
          <div class="header without-application" part="body">
            <div class="slot-hidden" part="app-wrapper">
              <slot name="app" part="app"></slot>
            </div>
            <nav class="navigation" part="navigation">
              <wpp-topbar-item active="" class="wpp-topbar-item" first-level="" menu="" part="topbar-item" role="WPP-LIST-ITEM">
                <mock:shadow-root>
                  <wpp-menu-context externalclass="topbar" listwidth="224px">
                    <wpp-navigation-item active="" extended="" label="" menu="" slot="trigger-element"></wpp-navigation-item>
                    <div>
                      <wpp-navigation-item label="Home" nesteditem="" value="home"></wpp-navigation-item>
                      <wpp-navigation-item label="Client services" nesteditem="" value="clientServices"></wpp-navigation-item>
                      <wpp-menu-context externalclass="topbar" listwidth="224px">
                        <wpp-list-item checked="" isextended="" slot="trigger-element" value="learning" style="--mc-item-margin: 4px 0; --li-padding: 8px 12px; --li-bg-color-selected: var(--wpp-grey-color-300); --li-left-icon-color-selected: var(--wpp-grey-color-600); --li-label-text-color-selected: var(--wpp-text-color); --li-label-text-font-weight-selected: 400;">
                          <p slot="label">
                            Learning
                          </p>
                        </wpp-list-item>
                        <div>
                          <wpp-navigation-item label="Guided tour" nesteditem="" value="guidedTour"></wpp-navigation-item>
                          <wpp-navigation-item label="Case studies" nesteditem="" value="caseStudies"></wpp-navigation-item>
                          <wpp-navigation-item active="" label="Community" nesteditem="" value="community"></wpp-navigation-item>
                        </div>
                      </wpp-menu-context>
                      <wpp-navigation-item label="Marketplace" nesteditem="" value="marketplace"></wpp-navigation-item>
                      <wpp-navigation-item label="Dev portal" nesteditem="" value="devPortal"></wpp-navigation-item>
                    </div>
                  </wpp-menu-context>
                </mock:shadow-root>
              </wpp-topbar-item>
            </nav>
            <div class="slot-hidden" part="right-wrapper">
              <slot name="right" part="right"></slot>
            </div>
          </div>
        </wpp-grid>
      </wpp-grid>
    </div>
    <wpp-divider part="divider"></wpp-divider>
  </mock:shadow-root>
</wpp-topbar>
`;

exports[`wpp-topbar renders component with application 1`] = `
<wpp-topbar class="wpp-topbar" exportparts="wrapper, body, navigation, topbar-item, divider, app, right, app-wrapper, right-wrapper">
  <mock:shadow-root>
    <div class="wrapper" part="wrapper">
      <wpp-grid container="">
        <wpp-grid all="24" item="">
          <div class="header with-app" part="body">
            <div part="app-wrapper">
              <slot name="app" part="app"></slot>
            </div>
            <nav class="navigation" part="navigation">
              <wpp-topbar-item active="" class="wpp-topbar-item" first-level="" menu="" part="topbar-item" role="WPP-LIST-ITEM">
                <mock:shadow-root>
                  <wpp-menu-context externalclass="topbar" listwidth="224px">
                    <wpp-navigation-item active="" extended="" label="" menu="" slot="trigger-element"></wpp-navigation-item>
                    <div>
                      <wpp-navigation-item label="Home" nesteditem="" value="home"></wpp-navigation-item>
                      <wpp-navigation-item label="Client services" nesteditem="" value="clientServices"></wpp-navigation-item>
                      <wpp-menu-context externalclass="topbar" listwidth="224px">
                        <wpp-list-item checked="" isextended="" slot="trigger-element" value="learning" style="--mc-item-margin: 4px 0; --li-padding: 8px 12px; --li-bg-color-selected: var(--wpp-grey-color-300); --li-left-icon-color-selected: var(--wpp-grey-color-600); --li-label-text-color-selected: var(--wpp-text-color); --li-label-text-font-weight-selected: 400;">
                          <p slot="label">
                            Learning
                          </p>
                        </wpp-list-item>
                        <div>
                          <wpp-navigation-item label="Guided tour" nesteditem="" value="guidedTour"></wpp-navigation-item>
                          <wpp-navigation-item label="Case studies" nesteditem="" value="caseStudies"></wpp-navigation-item>
                          <wpp-navigation-item active="" label="Community" nesteditem="" value="community"></wpp-navigation-item>
                        </div>
                      </wpp-menu-context>
                      <wpp-navigation-item label="Marketplace" nesteditem="" value="marketplace"></wpp-navigation-item>
                      <wpp-navigation-item label="Dev portal" nesteditem="" value="devPortal"></wpp-navigation-item>
                    </div>
                  </wpp-menu-context>
                </mock:shadow-root>
              </wpp-topbar-item>
            </nav>
            <div class="slot-hidden" part="right-wrapper">
              <slot name="right" part="right"></slot>
            </div>
          </div>
        </wpp-grid>
      </wpp-grid>
    </div>
    <wpp-divider part="divider"></wpp-divider>
  </mock:shadow-root>
  <div slot="app">
    <img alt="app-logo" src="https://easydrawingguides.com/wp-content/uploads/2018/09/Impossible-Triangle-09.png">
    <wpp-typography tag="h3" type="m-strong">
      APP Name
    </wpp-typography>
  </div>
</wpp-topbar>
`;
